项目初始化

--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -9,6 +9,8 @@
     <version>2017-12-07</version>
     <packaging>pom</packaging>
     <modules>
+        <module>service-report-pull-ag</module>
+
         <module>service-api-zb</module>
         <module>service-api-common</module>
         <module>service-api-zb-impl</module>
