--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -6,9 +6,28 @@
 
     <groupId>com.eason.report</groupId>
     <artifactId>parent</artifactId>
-    <version>2017-12-07</version>
+    <version>2019-5-10</version>
     <packaging>pom</packaging>
     <modules>
         <module>service-report-pull-ag</module>
     </modules>
+
+    <properties>
+        <env.host>47.52.140.84:8081</env.host>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.8</java.version>
+    </properties>
+    
+    <distributionManagement>
+        <repository>
+            <id>eason-releases</id>
+            <name>eason releases Repository</name>
+            <url>http://${env.host}/nexus/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>eason-snapshots</id>
+            <name>eason snapshots Repository</name>
+            <url>http://${env.host}/nexus/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
