--- a/report-api/pom.xml
+++ b/report-api/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.eason.report</groupId>
-    <artifactId>parent</artifactId>
+    <artifactId>report-api</artifactId>
     <version>2019-5-10</version>
     <packaging>pom</packaging>
     <modules>
@@ -17,7 +17,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
     </properties>
-    
+
     <distributionManagement>
         <repository>
             <id>eason-releases</id>
