--- a/report-api-impl/service-report-pull-ag-impl/pom.xml
+++ b/report-api-impl/service-report-pull-ag-impl/pom.xml
@@ -16,6 +16,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.eason.report</groupId>
+            <artifactId>service-report-pull-ag</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
