--- a/report-api-impl/service-report-pull-ag-impl/pom.xml
+++ b/report-api-impl/service-report-pull-ag-impl/pom.xml
@@ -3,9 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.eason.api</groupId>
-        <artifactId>parent</artifactId>
-        <version>2018-12-26</version>
+        <groupId>com.eason.report</groupId>
+        <artifactId>report-api-impl</artifactId>
+        <version>2019-5-10</version>
     </parent>
 
     <groupId>com.eason.report</groupId>
