--- a/report-api-impl/service-report-pull-ag-impl/src/main/resources/bootstrap.properties
+++ b/report-api-impl/service-report-pull-ag-impl/src/main/resources/bootstrap.properties
@@ -5,3 +5,8 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=sys-server-config
 
 eureka.client.serviceUrl.defaultZone=http://10.10.4.240:8760/eureka/
+
+#ActiveMQ
+spring.activemq.broker-url=tcp://10.10.4.230:61616
+spring.activemq.user=admin
+spring.activemq.password=admin
