--- a/report-api-impl/service-report-pull-ag-impl/pom.xml
+++ b/report-api-impl/service-report-pull-ag-impl/pom.xml
@@ -79,7 +79,8 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.14</version>
+            <version>1.16.22</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
