--- a/report-api-impl/service-report-pull-ag-impl/src/main/resources/bootstrap.properties
+++ b/report-api-impl/service-report-pull-ag-impl/src/main/resources/bootstrap.properties
@@ -9,3 +9,7 @@ eureka.client.serviceUrl.defaultZone=http://10.10.4.240:8760/eureka
 spring.activemq.broker-url= tcp://10.10.4.230:61616
 spring.activemq.user=admin
 spring.activemq.password=admin
+
+spring.data.mongodb.uri=mongodb://10.10.4.230:27017
+spring.data.mongodb.username=lottery
+spring.data.mongodb.password=eason
