--- a/report-api-impl/service-report-pull-data-center/pom.xml
+++ b/report-api-impl/service-report-pull-data-center/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>service-report-pull-data-center</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>service-report-pull-data-center</name>
-    <description>报表中央信息库</description>
+    <description>中央信息库</description>
 
     <dependencies>
         <dependency>
