--- a/report-api-impl/service-report-pull-data-center/pom.xml
+++ b/report-api-impl/service-report-pull-data-center/pom.xml
@@ -40,6 +40,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.3</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.eason.report</groupId>
             <artifactId>service-report-pull-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
