--- a/report-api-impl/service-report-pull-data-center/pom.xml
+++ b/report-api-impl/service-report-pull-data-center/pom.xml
@@ -44,7 +44,11 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>4.0</version>
+        </dependency>
         <dependency>
             <groupId>com.eason.report</groupId>
             <artifactId>service-report-pull-core</artifactId>
