--- a/transfer-api/pom.xml
+++ b/transfer-api/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <!--SpringBoot的配置-->
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -11,30 +10,69 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>com.eason.transfer</groupId>
     <artifactId>transfer-api</artifactId>
     <version>2019-5-10</version>
     <packaging>pom</packaging>
+
     <modules>
         <module>service-transfer-openapi-core</module>
     </modules>
 
+    <!--SpringCloud的配置-->
     <properties>
         <env.host>47.52.140.84:8081</env.host>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
+
+        </dependencies>
+    </dependencyManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <repository>
             <id>eason-releases</id>
             <name>eason releases Repository</name>
-            <url>http://${env.host}/nexus/content/repositories/eason-releases/</url>
+            <url>http://${env.host}/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
             <id>eason-snapshots</id>
             <name>eason snapshots Repository</name>
-            <url>http://${env.host}/nexus/content/repositories/eason-snapshots/</url>
+            <url>http://${env.host}/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
