--- a/transfer-api/service-transfer-openapi-core/src/main/resources/bootstrap.properties
+++ b/transfer-api/service-transfer-openapi-core/src/main/resources/bootstrap.properties
@@ -1,7 +1,8 @@
-spring.application.name=service-report-pull-data-center
+spring.application.name=service-transfer-openapi-core
 spring.cloud.config.profile=${config.profile:dev}
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=sys-server-config
 
 eureka.client.serviceUrl.defaultZone=http://10.10.4.240:8760/eureka
+server.address=0.0.0.0
