--- a/transfer-api-impl/service-transfer-api-user/pom.xml
+++ b/transfer-api-impl/service-transfer-api-user/pom.xml
@@ -16,9 +16,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.18</version>
+            <groupId>com.eason.transfer</groupId>
+            <artifactId>service-transfer-api-user-sdk</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
