--- a/transfer-api-impl/service-transfer-api-user/src/main/resources/bootstrap.properties
+++ b/transfer-api-impl/service-transfer-api-user/src/main/resources/bootstrap.properties
@@ -5,3 +5,6 @@ spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=sys-server-config
 
 eureka.client.serviceUrl.defaultZone=http://192.168.65.100:8760/eureka
+
+#apidocÎÄµµÄ¿Â¼
+spring.resources.static-locations=classpath:/templates/
