--- a/transfer-api-impl/service-transfer-api-chess/pom.xml
+++ b/transfer-api-impl/service-transfer-api-chess/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.28</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.1.0-rc2</version>
+        </dependency>
     </dependencies>
 
     <build>
