--- a/transfer-api-impl/service-transfer-admin-core/src/main/resources/bootstrap.properties
+++ b/transfer-api-impl/service-transfer-admin-core/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
+management.endpoints.web.base-path=/myactuator
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+
 #表示放在classpath的i18n文件夹，文件前缀为exception
 spring.messages.basename=i18n.exception
 spring.resources.static-locations=classpath:/templates/
@@ -16,4 +20,4 @@ spring.application.name=service-transfer-admin-core
 spring.cloud.config.profile=${config.profile:dev}
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=sys-server-config
-eureka.client.serviceUrl.defaultZone=http://10.20.22.230:8760/eureka
+eureka.client.serviceUrl.defaultZone=http://47.75.90.65:8760/eureka
