--- a/transfer-api-impl/service-transfer-api-chess/src/main/resources/bootstrap.properties
+++ b/transfer-api-impl/service-transfer-api-chess/src/main/resources/bootstrap.properties
@@ -1,11 +1,14 @@
+management.endpoints.web.base-path=/myactuator
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+
 spring.application.name=service-transfer-api-chess
 spring.cloud.config.profile=${config.profile:dev}
 
 spring.cloud.config.discovery.enabled=true
 spring.cloud.config.discovery.serviceId=sys-server-config
 
-eureka.client.serviceUrl.defaultZone=http://10.20.25.230:8760/eureka
-
+eureka.client.serviceUrl.defaultZone=http://47.75.90.65:8760/eureka
 #apidocÎÄµµÄ¿Â¼
 spring.resources.static-locations=classpath:/templates/
 
