--- a/transfer-api-impl/service-transfer-openapi-core/src/main/resources/bootstrap.properties
+++ b/transfer-api-impl/service-transfer-openapi-core/src/main/resources/bootstrap.properties
@@ -1,3 +1,7 @@
+management.endpoints.web.base-path=/myactuator
+management.endpoints.web.exposure.include=*
+management.endpoint.shutdown.enabled=true
+
 #表示放在classpath的i18n文件夹，文件前缀为exception
 spring.messages.basename=i18n.exception
 spring.resources.static-locations=classpath:/templates/
