--- a/transfer-api-impl/service-transfer-api-zb/pom.xml
+++ b/transfer-api-impl/service-transfer-api-zb/pom.xml
@@ -76,6 +76,12 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.eason.transfer</groupId>
+            <artifactId>service-transfer-api-zb-sdk</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
