--- a/transfer-api-impl/service-transfer-api-user/pom.xml
+++ b/transfer-api-impl/service-transfer-api-user/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>jedis</artifactId>
             <version>3.1.0-rc2</version>
         </dependency>
+        <dependency>
+            <groupId>commons-net</groupId>
+            <artifactId>commons-net</artifactId>
+            <version>3.6</version>
+        </dependency>
 
     </dependencies>
 
