--- a/transfer-api-impl/service-transfer-api-user/pom.xml
+++ b/transfer-api-impl/service-transfer-api-user/pom.xml
@@ -76,7 +76,11 @@
             <artifactId>commons-net</artifactId>
             <version>3.6</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-httpclient</groupId>
+            <artifactId>commons-httpclient</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
