重构支付模块

--- a/transfer-api-impl/pom.xml
+++ b/transfer-api-impl/pom.xml
@@ -22,6 +22,7 @@
         <module>service-transfer-api-zb</module>
         <module>service-transfer-admin-core</module>
         <module>service-transfer-openapi-core</module>
+        <module>service-transfer-api-money</module>
     </modules>
 
     <!--SpringCloud的配置-->
