管理项目架构

--- a/transfer-api/service-transfer-api-money-sdk/pom.xml
+++ b/transfer-api/service-transfer-api-money-sdk/pom.xml
@@ -16,6 +16,10 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.eason.transfer</groupId>
             <artifactId>openapi-common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
