--- a/transfer-api-impl/service-transfer-api-money/pom.xml
+++ b/transfer-api-impl/service-transfer-api-money/pom.xml
@@ -72,5 +72,16 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.11</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.30</version>
+        </dependency>
+
     </dependencies>
 </project>
