--- a/transfer-api/pom.xml
+++ b/transfer-api/pom.xml
@@ -18,7 +18,6 @@
 
     <modules>
         <module>openapi-common</module>
-        <module>service-transfer-api-chess-sdk</module>
         <module>service-transfer-api-money-sdk</module>
     </modules>
 
@@ -27,10 +26,23 @@
 <!--        <env.host>47.75.90.65:8081</env.host>-->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>1.8</java.version>
+        <spring-cloud.version>2021.0.3</spring-cloud.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
