--- a/transfer-api-impl/service-transfer-openapi-core/pom.xml
+++ b/transfer-api-impl/service-transfer-openapi-core/pom.xml
@@ -24,7 +24,7 @@
         </dependency>
         <dependency>
             <groupId>com.eason.transfer</groupId>
-            <artifactId>service-transfer-api-money-sdk</artifactId>
+            <artifactId>mb-pay-match-api</artifactId>
             <version>1.0.0</version>
         </dependency>
 
@@ -33,17 +33,7 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.cloud</groupId>-->
-<!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-<!--            <version>2.2.10.BUILD-SNAPSHOT</version>-->
-<!--        </dependency>-->
 
-        <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>3.1.3</version>
-        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -115,6 +105,17 @@
             <artifactId>mybatis-generator-core</artifactId>
             <version>1.4.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-extension</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
