支付接口的MQ+回调+延时架构

--- a/transfer-api-impl/mb-pay-match-api/pom.xml
+++ b/transfer-api-impl/mb-pay-match-api/pom.xml
@@ -29,6 +29,12 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <!-- SpringBoot集成rabbitMQ框架 -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
